Amendment to 13935 to ensure long URLs wrap in all browsers

--- a/themes/_administration/style.css
+++ b/themes/_administration/style.css
@@ -173,7 +173,7 @@ input.log-date {text-align:center; width:70px;}
 input.log-filter {width:120px;}
 table#log_list {width:100%}
 #log_list th {min-width:80px;white-space:nowrap;}
-#log_list pre {margin:0 0 20px 0;max-width:250px;white-space:pre-wrap;}
+#log_list pre {margin:0 0 20px 0;max-width:250px;white-space:pre-wrap;word-wrap: break-word;-ms-word-break: break-all;word-break: break-all; word-break: break-word;-webkit-hyphens: auto;-moz-hyphens: auto; hyphens: auto;}
  
 /* README */
 #readme {font-size:12px; padding:10px 20px;}
